--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "deploy": "gh-pages -d docs"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.28.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -65,6 +67,7 @@
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
+    "serve": "^14.2.4",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
